--- a/MyApp/res/values/strings.xml
+++ b/MyApp/res/values/strings.xml
@@ -3,5 +3,5 @@
 
     <string name="hello">Hello World, MainActivity!</string>
     <string name="app_name">MyApp</string>
-
+	<string name='cn_hello'>你好，AIDE</string>
 </resources>
